ECJ 3.36.0 regression: The type 'E extends java.lang.Exception' is not a valid substitute for the type parameter 'E extends java.lang.@NonNull Exception'
fixes #1691

+ also slightly updates NullAnnotationTests18 as NullAnnotationTests21